--- a/src/components/ToDoList/AddListForm.css
+++ b/src/components/ToDoList/AddListForm.css
@@ -1,4 +1,4 @@
-.form-container {
+.add-list-form-container {
     display: flex;
     flex-direction: column;
     padding-bottom: 2%;
@@ -17,16 +17,16 @@
     box-shadow: 4px 4px 6px rgba(0, 0, 0, 1);
 }
 
-.form-container form {
+.add-list-form-container form {
     width: 90%;
     margin-top: 5%;
 }
 
-.form-container label {
+.add-list-form-container label {
     float: left;
 }
 
-.form-container input {
+.add-list-form-container input {
     font-size: 30px;
     outline: 1px;
     width: 70%;
@@ -37,20 +37,19 @@
     float: right;
 }
 
-.form-container .input-field {
+.add-list-form-container .input-field {
     margin-bottom: 10%;
     font-size: 30px;
 }
 
-.form-container button {
+.add-list-form-container button {
     margin-top: 5%;
     font-size: 30px;
     background: rgb(255, 0, 255);
     cursor: pointer;
 }
 
-.form-container button:hover {
+.add-list-form-container button:hover {
     transform: scale(1.1);
     transition: all 0.3s ease-out;
-    
 }
