--- a/src/components/GradeCalculator/GradeCalculation.css
+++ b/src/components/GradeCalculator/GradeCalculation.css
@@ -6,9 +6,24 @@ main {
     margin: 0;
 }
 
+.form-output {
+    width: 50%;
+    margin-top: 40px;
+    background-color: white;
+    border-radius: 50px;
+    color: black;
+    outline-style: solid;
+    outline-width: 4px;
+    outline-color: black;
+    outline-offset: -10px;
+    border-width: 4px;
+    border-style: solid;
+    margin-bottom: -5%;
+}
+
 .grade-form-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-basis: 60%;
     margin-left: 20%;
     align-items: center;
@@ -25,8 +40,7 @@ main {
     width: 350px;
     box-sizing: content-box;
     float: left;
-    margin-left: 20%;
-    white-space: nowrap;
+    margin-left: -40%;
 }
 
 .grade-form-container h3 {
@@ -45,7 +59,7 @@ main {
     text-indent: -10%;
     text-decoration: underline;
     margin-bottom: -3%;
-    margin-top: 15%;
+    margin-top: 10%;
 }
 
 .form-field {
