--- a/src/components/ToDoList/AddListForm.css
+++ b/src/components/ToDoList/AddListForm.css
@@ -15,6 +15,8 @@
     outline-width: 5px;
     outline-offset: -12px;
     box-shadow: 4px 4px 6px rgba(0, 0, 0, 1);
+    animation: growDown 700ms ease-in-out forwards;
+    transform-origin: top center;
 }
 
 .add-list-form-container form {
