--- a/src/components/GradeCalculator/GradeCalculator.css
+++ b/src/components/GradeCalculator/GradeCalculator.css
@@ -24,8 +24,8 @@ main {
 .grade-form-container {
     display: flex;
     flex-direction: column;
-    flex-basis: 60%;
     margin-left: 20%;
+    margin-right: 20%;
     align-items: center;
     background-color: rgb(112, 1, 97);
     border-radius: 50px;
